fix: adjust line-height in contact form for improved readability

--- a/src/app/landing-page/sections/f-contact/contact-form/contact-form.component.scss
+++ b/src/app/landing-page/sections/f-contact/contact-form/contact-form.component.scss
@@ -87,7 +87,7 @@
       background-color: transparent;
       border: none;
       // height: 1.13rem;
-      line-height: 1.25rem;
+      line-height: 1.35rem;
       max-height: 128px;
       resize: none;
       outline: none;
